# screenshot

./: .gitignore  README.md  click_and_screenshot.py  mouse_tracker.py  pyproject.toml  requirements.txt  run.bat  run.ps1  run_tracker.bat  run_tracker.ps1  screenshot.py  setup.bat  setup.ps1  upload.py
scripts/: bootstrap.py  config.py  screenshot.py  setup.py  upload.py
tests/: test_screenshot.py  test_upload.py
